# agora-gstreamer

./: build_all.sh  build_all_arm.sh
agora/libagorac/: CMakeLists.txt  agorac.cpp  agorac.h  agoraconfig.h  agoraio.cpp  agoraio.h  install-arm.sh  install.sh  makefile
agora/libagorac/helpers/: context.h  log.h  servicecreation.cpp  servicecreation.h
agora/libagorac/observers/: connectionobserver.cpp  connectionobserver.h  frameobserver.h  localuserobserver.cpp  localuserobserver.h  pcmframeobserver.cpp  pcmframeobserver.h  sampleevent.cpp  sampleevent.h  yuvframeobserver.cpp  yuvframeobserver.h
agora/sdk/agora_sdk/include/: NGIAgoraLocalUser.h
agora/sdk/arm64/agora_sdk/include/: AgoraBase.h  CHANGES.md  mainpage.md
agora/sdk/arm64/agora_sdk/include/internal/: agora_log_i.h  agora_service_i.h  audio_options_i.h  audio_track_i.h  builtin_extension_literal_def.h  channel_capability_i.h  config_engine_i.h  content_inspect_i.h  extension_provider_i.h  local_user_i.h  media_player_i.h  media_recorder_i.h  packet_i.h  rtc_connection_i.h  screen_capture_i.h  video_codec_provider_i.h  video_config_i.h  video_frame_meta_info.h  video_node_i.h  video_track_i.h
gst-agora/: CMakeLists.txt  install  meson.build
gst-agora/plugin-src/: meson.build
gst-agora/plugin-src/agorasrc/: gstagorasrc.c  gstagorasrc.h
gst-agora/plugin-src/shared/: agorah264parser.c  agorah264parser.h
